--- a/Práctica 1/styles.css
+++ b/Práctica 1/styles.css
@@ -7,33 +7,52 @@ ol {
    counter-reset: item;
    margin: 0;
    padding: 0;
- }
- 
- ol > li {
+}
+
+ol>li {
    display: table;
    counter-increment: item;
    margin-bottom: 0.6em;
- }
- 
- ol > li:before {
+}
+
+ol>li:before {
    content: counters(item, ".") ". ";
    display: table-cell;
-   padding-right: 0.6em;    
- }
- 
- li ol > li {
-   margin: 0;
- }
- 
- li ol > li:before {
-   content: counters(item, ".") " ";
- }
+   padding-right: 0.6em;
+}
 
- .navigation {
+li ol>li {
+   margin: 0;
+}
+
+li ol>li:before {
+   content: counters(item, ".") " ";
+}
+
+.navigation {
    border: 1px solid black;
    width: 400px;
- }
- .aside-div {
+   position: absolute;
+}
+
+.aside-div {
    border: 1px solid black;
- }
- 
+   width: fit-content;
+}
+
+main {
+   border: 1px solid lightgray;
+}
+
+.aside-right {
+   float: right;
+}
+
+.left-aside {
+   float: left;
+}
+
+.left-aside ul {
+   list-style-type: none;
+   height: 100%;
+}
