--- a/Práctica 1/styles.css
+++ b/Práctica 1/styles.css
@@ -1,5 +1,5 @@
 .aside-table {
-   border: 1px solid black;
+   border: 1px solid lightgray;
 }
 
 ol {
@@ -30,18 +30,23 @@ li ol>li:before {
 }
 
 .navigation {
-   border: 1px solid black;
-   width: 400px;
+   border: 1px solid lightgray;
+   width: 25rem;
 
 }
 
 .aside-div {
-   border: 1px solid black;
-   width: fit-content;
+   border: 1px solid lightgray;
+
 }
 
 main {
    border: 1px solid lightgray;
+   float: right;
+   margin-left: 10.65rem;
+   position: relative;
+   padding-left: 0.625rem;
+   padding-right: 0.625rem;
 }
 
 .aside-right {
@@ -50,25 +55,39 @@ main {
 
 .left-aside {
    float: left;
-   border: 1px solid lightgray;
-   padding: 10px;
-   width: 150px;
+   padding: 0.625rem;
+   width: 9.375rem;
    background-color: #e3e1e1;
+   position: absolute;
 }
 
 .left-aside ul {
    list-style-type: none;
+   padding-left: 1rem;
 }
 
 .right-nav {
-float: right;
+   float: right;
 }
 
-.art {
-   margin-left: 200px;
-}
 
 .footer {
    background-color: #e3e1e1;
-   margin-left: 200px;
+   height: 9.375rem;
+   position: relative;
+   margin-left: 10.65rem;
+}
+
+.top-header {
+   background-color: #e3e1e1;
+   height: 5rem;
+   position: relative;
+   margin-left: 10.65rem;
+   
+}
+
+body {
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
 }
