--- a/Práctica 1/styles.css
+++ b/Práctica 1/styles.css
@@ -52,16 +52,16 @@ main {
    float: right;
 }
 
-.left-aside {
+.left-menu {
    float: left;
-   padding: 0.625rem;
+   padding-right: 1.3rem;
    width: 9.375rem;
    background-color: #e3e1e1;
    position: absolute;
-  
+   height: 100%;
 }
 
-.left-aside ul {
+.left-menu ul {
    list-style-type: none;
    padding-left: 1rem;
 }
@@ -84,13 +84,16 @@ main {
    height: 5rem;
    position: relative;
    margin-left: 10.65rem;
-   
+
 }
 
 body {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
+   position: absolute;
+   margin:0;
+    padding:0;
 }
 
 .left-nav {
@@ -104,16 +107,18 @@ body {
 .asides {
    display: flex;
    justify-content: space-between;
-  
+
 }
 
 .four {
-overflow: auto;
-float: left;
+   overflow: auto;
+   float: left;
 }
-li{
+
+li {
    margin: 0.125rem;
 }
+
 nav a {
    margin: 0.125rem;
 }
