--- a/Immersive Day 5_ - Responsive design Lab/Responsive Design Lab Starter Code v2 mobile first/styles/styles.css
+++ b/Immersive Day 5_ - Responsive design Lab/Responsive Design Lab Starter Code v2 mobile first/styles/styles.css
@@ -142,7 +142,7 @@ footer {
 
 /*media queries*/
 
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
 	main {
 		flex-direction: row;
 		justify-content: space-around;
