--- a/Immersive Day 5_ - Responsive design Lab/Responsive Design Lab Starter Code/styles/styles.css
+++ b/Immersive Day 5_ - Responsive design Lab/Responsive Design Lab Starter Code/styles/styles.css
@@ -1,163 +1,167 @@
 /* Box-sizing border-box */
 * {
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-	margin: 0;
-	font-family: 'Roboto', sans-serif;
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  background-color: white;
 }
 
 a {
-	padding: 10px;
+  padding: 14px;
 }
 
 header {
-	display: flex;
-	justify-content: space-between;
-	height: 50px;
-	background: #999999;
-	border-bottom: solid 1px;
-	z-index: 10;
+  display: flex;
+  justify-content: space-between;
+  height: 10%;
+  background-color: #FF0000;
+  border-bottom: solid 1px;
+  z-index: 10;
+  color: white;
 }
-
-.header-left,
-.header-right,
-.logo {
-	display: flex;
-	align-items: center;
+header .header__left {
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+  align-self: left;
 }
-
-.logo {
-	font-size: 2rem;
+header .header__right {
+  display: flex;
+  align-items: center;
+  padding-right: 20px;
+  align-self: right;
 }
-
-.header-left {
-	padding-left: 20px;
-}
-
-.header-right {
-	padding-right: 20px;
+header .header__logo {
+  display: flex;
+  align-items: center;
+  font-size: 2rem;
 }
 
 .hero {
-	height: 300px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background: #eeeeee;
-	text-align: center;
-	border-bottom: solid 1px #666666;
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #3B4CCA;
+  text-align: center;
+  border-bottom: solid 1px #666666;
+  color: white;
+}
+.hero .hero__title {
+  font-size: xxx-large;
+}
+.hero .hero__tagline {
+  font-size: xx-large;
 }
 
 main {
-	display: flex;
-	justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .card-list {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	width: 100%;
-	padding: 35px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  padding: 35px;
+  align-content: space-around;
+}
+.card-list .card-list__card {
+  width: 23rem;
+  height: 28rem;
+  margin: 0.625rem;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  justify-content: center;
+  background: #eeeeee;
+  box-shadow: 3px 3px 3px #aaaaaa;
+  border-radius: 5px;
+}
+.card-list .card-list__card .card-list__card-content {
+  justify-self: center;
+  flex: 0 0 100%;
+  text-align: center;
+}
+.card-list .card-list__card .card-list__card-title {
+  flex: 0 0 100%;
+  text-align: center;
+  border-top: dashed 1px #555555;
+  padding-top: 15px;
 }
 
-.card {
-	width: 150px;
-	height: 200px;
-	margin: 10px;
-	display: flex;
-	align-items: flex-end;
-	justify-content: center;
-	background: #eeeeee;
-	box-shadow: 3px 3px 3px #aaaaaa;
-	border-radius: 5px;
-	flex-wrap: wrap;
-}
-
-.card-content {
-	flex: 0 0 100%;
-	justify-self: center;
-	text-align: center;
-}
-
-.card-title {
-	flex: 0 0 100%;
-	text-align: center;
-	border-top: dashed 1px #555555;
-	padding-top: 15px;
+img {
+  width: 100%;
+  height: auto;
+  padding: 1rem;
 }
 
 .activity-list {
-	background: #dddddd;
-	padding: 20px;
-	display: flex;
-	flex-wrap: wrap;
-	align-items: flex-start;
+  background-color: #B3A125;
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  color: white;
+}
+.activity-list .activity-list__activity-item {
+  width: 300px;
+  height: 250px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: white;
+  margin: 10px 0;
+  border-radius: 5px;
+  box-shadow: 2px 2px 2px #999999;
 }
 
-.activity-list>* {
-	flex: 0 0 100%;
-}
-
-.activity-item {
-	width: 300px;
-	height: 150px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background: white;
-	margin: 10px 0;
-	border-radius: 5px;
-	box-shadow: 2px 2px 2px #999999;
+.activity-list > * {
+  flex: 0 0 100%;
 }
 
 footer {
-	display: flex;
-	justify-content: space-between;
-	background: #999999;
-	border-top: solid 1px #666666;
-	padding: 25px;
+  display: flex;
+  justify-content: center;
+  background-color: #FF0000;
+  border-top: solid 1px #666666;
+  padding: 25px;
+  color: white;
 }
-
-.header-left {
-	align-self: left;
+footer .footer__left {
+  align-self: right;
 }
-
-.header-right {
-	align-self: right;
-}
-
-.footer-left {
-	align-self: right;
-}
-
 
 /*media queries*/
-
 @media (max-width: 768px) {
-	main {
-		flex-wrap: wrap;
-		flex-direction: column;
-	}
+  main {
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
 
-	.header-left,
-	.header-right {
-		display: none;
-	}
-	header {
-		justify-content: center;
-	}
-	.hero {
-		height: calc(100vw*0.4);
-	}
-	.activity-list {
-		justify-content: center;
-	}
-	.activity-item {
-		width: 100%;
-	}
+  header .header__left,
+header .header__right {
+    display: none;
+  }
+
+  header {
+    justify-content: center;
+  }
+
+  .hero {
+    height: calc(100vw*0.5);
+  }
+
+  .activity-list {
+    justify-content: center;
+  }
+  .activity-list .activity-list__activity-item {
+    width: 100%;
+  }
 }
