--- a/todo list/styles/styles.css
+++ b/todo list/styles/styles.css
@@ -13,6 +13,7 @@ main {
     width: 70%;
     border: 1px solid black;
 }
+
 .table th {
     background-color: #CE8B3B;
     color: white;
@@ -22,6 +23,11 @@ main {
 .table tr {
     background-color: #F5F5F6;
     height: 2rem;
+
+}
+
+.table td {
+    text-align: center;
 }
 
 .table-section {
@@ -40,9 +46,10 @@ header {
     background-color: #2A366A;
     color: #F5F5F6;
 }
+
 img {
-width: 100%;
-height: auto;
+    width: 100%;
+    height: auto;
 }
 
 body {
