--- a/tv-shows/src/components/list/list.css
+++ b/tv-shows/src/components/list/list.css
@@ -1,5 +1,5 @@
 .list {
-  background-color: #72E9CF;
+  background-color: #72e9cf;
   margin-top: 2rem;
   max-height: 50vh;
   overflow-y: scroll;
@@ -20,21 +20,35 @@
 }
 
 .episode-info {
-    height: 100%;
-
+  height: 100%;
 }
 
 .list li {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around ;
-    margin-bottom: 2rem;
-
-
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-bottom: 2rem;
 }
 
 .list ul {
-    display: flex;
-    align-content: space-around;
+  display: flex;
+  align-content: space-around;
+  flex-direction: column;
+}
+
+/*media queries*/
+@media only screen and (max-width: 900px) {
+  .show-container {
     flex-direction: column;
+  }
+  .info {
+    width: 100%;
+    margin: 0.5rem;
+    border: 1px solid black;
+  }
+  .list {
+    width: 100%;
+    margin: 0.5rem;
+    border: 1px solid black;
+  }
 }
