after class example

--- a/tv-shows/src/components/filter/filter.css
+++ b/tv-shows/src/components/filter/filter.css
@@ -1,6 +1,6 @@
 .filter {
   background-color: #CFE6BC;
   padding: 1rem;
-margin: 2rem;
+margin: 0 2rem 2rem 2rem;
   border: 1px solid #AA7745;
 }
