state changes css and style

--- a/heroes/src/components/imgCard/imgCard.css
+++ b/heroes/src/components/imgCard/imgCard.css
@@ -16,4 +16,6 @@
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
+    color: white;
+    align-items: center;
 }
