--- a/heroes/src/components/footer/footer.css
+++ b/heroes/src/components/footer/footer.css
@@ -2,7 +2,10 @@ footer {
     height: 4rem;
     background-color: gray;
     padding: 1rem;
+    text-align: center;
 }
-header h4 {
+footer h4 {
     margin: 0;
+    color: white;
+    font-size: xx-large;
 }
