--- a/heroes/src/components/header/header.css
+++ b/heroes/src/components/header/header.css
@@ -1,8 +1,12 @@
 header {
-    height: 4rem;
+    height: 15rem;
     background-color: gray;
     padding: 1rem;
+    text-align: center;
+    background-image: url("../header/banner.jpg");
+    background-size: cover;
 }
 header h1 {
     margin: 0;
+    color: white;
 }
